--- a/story.html
+++ b/story.html
@@ -1,12 +1,10 @@
-<!-- story.html - Horizontal Scroll 3D Story -->
-<section id="story" style="position:relative; background:#003366; font-family:'Vazirmatn','IBM Plex Sans',sans-serif; color:#FAFAFA; overflow-x:hidden; padding:4rem 1rem; min-height:80vh;">
+<!-- story.html - Responsive Horizontal Scroll 3D Story -->
+<section id="story" style="position:relative; background:#003366; font-family:'Vazirmatn','IBM Plex Sans',sans-serif; color:#FAFAFA; padding:4rem 1rem; min-height:80vh;">
 
-  <div class="story-container" style="display:flex; gap:3rem; overflow-x:auto; scroll-behavior:smooth; perspective:1200px; padding-bottom:2rem;">
-    
+  <div class="story-container">
     <!-- Card 1 -->
     <div class="story-card">
       <div class="icon">
-        <!-- SVG Lightbulb -->
         <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="#E67E22" viewBox="0 0 24 24"><path d="M12 2a6 6 0 0 0-6 6c0 2.96 2 5.67 4.69 6.48v2.02a1 1 0 0 0 2 0v-2.02C16 13.67 18 10.96 18 8a6 6 0 0 0-6-6z"/></svg>
       </div>
       <h3>شروع ایده</h3>
@@ -16,7 +14,6 @@
     <!-- Card 2 -->
     <div class="story-card">
       <div class="icon">
-        <!-- SVG Package -->
         <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="#E67E22" viewBox="0 0 24 24"><path d="M21 16V8a2 2 0 0 0-1-1.73l-8-4a2 2 0 0 0-2 0l-8 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l8 4a2 2 0 0 0 2 0l8-4A2 2 0 0 0 21 16z"/></svg>
       </div>
       <h3>اولین محصول</h3>
@@ -26,7 +23,6 @@
     <!-- Card 3 -->
     <div class="story-card">
       <div class="icon">
-        <!-- SVG Growth Chart -->
         <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="#E67E22" viewBox="0 0 24 24"><path d="M3 3v18h18v-2H5V3H3zm15 4v2h-6V7h6zm-3 6v2h-3v-2h3zm6-4v2h-3v-2h3z"/></svg>
       </div>
       <h3>رشد</h3>
@@ -36,7 +32,6 @@
     <!-- Card 4 -->
     <div class="story-card">
       <div class="icon">
-        <!-- SVG Trophy -->
         <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="#E67E22" viewBox="0 0 24 24"><path d="M17 3H7v4h10V3zm2 2v6a4 4 0 0 1-4 4h-1v3H10v-3H9a4 4 0 0 1-4-4V5h14z"/></svg>
       </div>
       <h3>موفقیت</h3>
@@ -45,9 +40,17 @@
 
   </div>
 
-  <!-- 🌈 CSS -->
+  <!-- CSS -->
   <style>
-    /* Story Cards */
+    .story-container {
+      display: flex;
+      gap: 3rem;
+      overflow-x: auto;
+      scroll-behavior: smooth;
+      perspective: 1200px;
+      padding-bottom: 2rem;
+    }
+
     .story-card {
       min-width: 280px;
       background: rgba(255,255,255,0.15);
@@ -84,7 +87,6 @@
       line-height: 1.6;
     }
 
-    /* Float animation */
     @keyframes float {
       0%,100%{ transform: translateY(0px); }
       50%{ transform: translateY(-8px); }
@@ -94,46 +96,70 @@
     .story-container::-webkit-scrollbar { display: none; }
     .story-container { -ms-overflow-style: none; scrollbar-width: none; }
 
-    /* Responsive */
-@media(max-width:768px){
-  .story-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-    gap: 1rem;
-    overflow-x: visible; /* افقی غیر فعال */
-    padding-bottom: 0;
-  }
+    /* Responsive - Mobile Friendly */
+    @media(max-width:768px){
+      .story-container {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+        gap: 1rem;
+        overflow-x: visible;
+        padding-bottom: 0;
+      }
 
-  .story-card {
-    min-width: auto;
-    padding: 1rem;
-    transform: scale(1);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-  }
+      .story-card {
+        min-width: auto;
+        padding: 1rem;
+        transform: scale(1);
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+      }
 
-  .story-card.active {
-    transform: scale(1.05);
-    box-shadow: 0 10px 25px rgba(0,0,0,0.25);
-  }
-}
+      /* کارت فعال */
+      .story-card.active {
+        transform: scale(1.05);
+        box-shadow: 0 10px 25px rgba(0,0,0,0.25);
+      }
 
-
+      /* icon float کم عمق‌تر */
+      .story-card .icon {
+        animation: float 8s ease-in-out infinite;
+      }
+    }
   </style>
 
-  <!-- JS - optional 3D tilt on scroll -->
+  <!-- JS -->
   <script>
     const container = document.querySelector('.story-container');
     const cards = document.querySelectorAll('.story-card');
 
-    container.addEventListener('scroll', () => {
-      const center = container.scrollLeft + container.offsetWidth / 2;
-      cards.forEach(card => {
-        const cardCenter = card.offsetLeft + card.offsetWidth / 2;
-        const offset = (center - cardCenter) / 100; // adjust for effect
-        card.style.transform = `translateY(${-10 + offset*5}px) scale(${1 + Math.max(-0.05, Math.min(0.05, offset))})`;
-      });
-    });
+    // دسکتاپ - افکت 3D scroll
+    function desktop3DEffect() {
+      if(window.innerWidth > 768){
+        const center = container.scrollLeft + container.offsetWidth/2;
+        cards.forEach(card => {
+          const cardCenter = card.offsetLeft + card.offsetWidth/2;
+          const offset = (center - cardCenter)/100;
+          card.style.transform = `translateY(${-10 + offset*5}px) scale(${1 + Math.max(-0.05, Math.min(0.05, offset))})`;
+        });
+      } else {
+        // موبایل - reset transform
+        cards.forEach(card => card.style.transform='scale(1)');
+      }
+    }
+
+    container.addEventListener('scroll', desktop3DEffect);
+    window.addEventListener('resize', desktop3DEffect);
+    desktop3DEffect();
+
+    // موبایل - کارت فعال در grid
+    function updateActiveCardMobile() {
+      if(window.innerWidth <= 768){
+        const containerWidth = container.offsetWidth;
+        cards.forEach(card => card.classList.remove('active'));
+        // کارت وسط یا اولین کارت فعال
+        if(cards.length > 0) cards[0].classList.add('active');
+      }
+    }
+    window.addEventListener('resize', updateActiveCardMobile);
+    updateActiveCardMobile();
   </script>
-
-
 </section>
