--- a/index.html
+++ b/index.html
@@ -12,112 +12,227 @@
   <!-- فونت‌ها -->
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&family=Vazirmatn:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-  <style>
-    :root {
-      --background: hsl(0, 0%, 96%);
-      --foreground: hsl(210, 100%, 20%);
-      --accent: hsl(27, 79%, 52%);
-      --accent-hover: hsl(27, 79%, 58%);
-      --radius: 0.75rem;
-      --transition-smooth: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-    }
+<style>
+  /* =========================================
+     Variables - پالت رنگ و Transition
+  ========================================= */
+  :root {
+    --background: hsl(0, 0%, 96%);
+    --foreground: hsl(210, 100%, 20%);
+    --accent: hsl(27, 79%, 52%);
+    --accent-hover: hsl(27, 79%, 58%);
+    --radius: 0.75rem;
+    --transition-smooth: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 
-    body {
-      margin: 0;
-      font-family: 'Vazirmatn', 'IBM Plex Sans', sans-serif;
-      background: var(--background);
-      color: var(--foreground);
-      -webkit-font-smoothing: antialiased;
-      overflow-x: hidden;
-    }
+    --primary-bg: rgba(0, 51, 102, 0.8);
+    --primary-color: #FAFAFA;
+    --transition: 0.3s cubic-bezier(0.4,0,0.2,1);
+  }
 
-    .container { max-width: 1200px; margin: 0 auto; padding: 0 1rem; }
+  /* =========================================
+     Base Styles
+  ========================================= */
+  body {
+    margin: 0;
+    font-family: 'Vazirmatn','IBM Plex Sans',sans-serif;
+    background: var(--background);
+    color: var(--foreground);
+    -webkit-font-smoothing: antialiased;
+    overflow-x: hidden;
+  }
 
-    /* ناوبری */
-    nav {
-      position: fixed;
-      top: 0; left: 0; right: 0;
-      z-index: 50;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1rem 2rem;
-      background: rgba(255, 255, 255, 0.95);
-      backdrop-filter: blur(10px);
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-      transition: var(--transition-smooth);
-    }
-    nav a {
-      text-decoration: none;
-      color: var(--foreground);
-      margin: 0 1rem;
-      font-weight: 500;
-      position: relative;
-      transition: var(--transition-smooth);
-    }
-    nav a:hover { color: var(--accent); }
-    nav a::after {
-      content: '';
-      position: absolute;
-      bottom: -4px; left: 0;
-      width: 0%; height: 2px;
-      background: var(--accent);
-      transition: width var(--transition-smooth);
-    }
-    nav a:hover::after { width: 100%; }
-    .nav-logo { font-weight: 700; font-size: 1.5rem; color: var(--foreground); }
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 1rem;
+  }
 
-    /* موبایل */
-    @media (max-width: 768px) {
-      nav { flex-wrap: wrap; }
-      .nav-links {
-        display: none; flex-direction: column; width: 100%; text-align: right;
-      }
-      .nav-links.active {
-        display: flex;
-        background: rgba(255,255,255,0.98);
-        padding: 1rem;
-        border-top: 1px solid #eee;
-      }
-      .menu-toggle { display: block; cursor: pointer; font-size: 1.5rem; }
+  main {
+    margin-top: 80px;
+  }
+
+  section {
+    min-height: 60vh;
+    padding: 4rem 0;
+  }
+
+  /* =========================================
+     Navbar
+  ========================================= */
+  .nav {
+    position: fixed;
+    top:0; left:0; right:0;
+    z-index: 1000;
+    backdrop-filter: blur(10px);
+    background: var(--primary-bg);
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    transition: all var(--transition);
+  }
+
+  .nav-container {
+    max-width:1200px;
+    margin:0 auto;
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    padding:1rem 2rem;
+  }
+
+  .nav-logo {
+    font-weight:700;
+    font-size:1.6rem;
+    color: var(--primary-color);
+    transition: transform var(--transition);
+  }
+
+  .nav-links {
+    display:flex;
+    gap:2rem;
+    align-items:center;
+    position:relative;
+  }
+
+  .nav-links a {
+    color: var(--primary-color);
+    text-decoration:none;
+    font-weight:500;
+    position:relative;
+    padding:0.2rem 0;
+    transition: color var(--transition);
+  }
+
+  .nav-links a::after {
+    content:'';
+    position:absolute;
+    left:0; bottom:-3px;
+    width:0%; height:2px;
+    background: var(--accent);
+    transition: width var(--transition);
+  }
+
+  .nav-links a:hover::after,
+  .nav-links a.active::after {
+    width:100%;
+  }
+
+  .nav-links a:hover {
+    color: var(--accent);
+  }
+
+  /* Hamburger */
+  .menu-toggle {
+    display:none;
+    flex-direction:column;
+    gap:5px;
+    cursor:pointer;
+  }
+
+  .menu-toggle span {
+    display:block;
+    height:3px;
+    width:25px;
+    background: var(--primary-color);
+    border-radius:2px;
+    transition: all var(--transition);
+  }
+
+  /* Mobile menu */
+  @media(max-width:768px){
+    .menu-toggle { display:flex; }
+    .nav-links {
+      position:fixed;
+      top:0; left:0; right:0; bottom:0;
+      background: rgba(0,51,102,0.95);
+      flex-direction:column;
+      justify-content:center;
+      align-items:center;
+      gap:2rem;
+      transform:translateX(-100%);
+      transition: transform var(--transition);
     }
-    @media (min-width: 769px) { .menu-toggle { display: none; } }
+    .nav-links.open { transform:translateX(0); }
+  }
 
-    main { margin-top: 80px; }
-    section { min-height: 60vh; padding: 4rem 0; }
-
-    /* 🌙 Loader */
-    #loader {
-      position: fixed;
-      inset: 0;
-      background: linear-gradient(135deg, hsl(210,100%,20%), hsl(210,100%,30%));
-      display: flex;
-      align-items: center;
-      justify-content: center;
+  /* Mobile fallback for older nav toggle */
+  @media (max-width: 768px) {
+    nav { flex-wrap: wrap; }
+    .nav-links {
+      display: none;
       flex-direction: column;
-      z-index: 9999;
-      color: hsl(0,0%,98%);
-      font-weight: 600;
-      font-size: 1.3rem;
-      letter-spacing: 0.5px;
-      transition: opacity 0.5s ease;
+      width: 100%;
+      text-align: right;
     }
+    .nav-links.active {
+      display: flex;
+      background: rgba(255,255,255,0.98);
+      padding: 1rem;
+      border-top: 1px solid #eee;
+    }
+    .menu-toggle { display: block; cursor: pointer; font-size: 1.5rem; }
+  }
 
-    .loader-circle {
-      width: 60px;
-      height: 60px;
-      border: 4px solid rgba(255,255,255,0.3);
-      border-top-color: hsl(27,79%,52%);
-      border-radius: 50%;
-      animation: spin 1s linear infinite;
-      margin-bottom: 1rem;
-    }
+  @media (min-width: 769px) { 
+    .menu-toggle { display: none; } 
+  }
 
-    @keyframes spin {
-      from { transform: rotate(0deg); }
-      to { transform: rotate(360deg); }
+  /* =========================================
+     Loader
+  ========================================= */
+  #loader {
+    position: fixed;
+    inset: 0;
+    background: linear-gradient(135deg, hsl(210,100%,20%), hsl(210,100%,30%));
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    z-index: 9999;
+    color: hsl(0,0%,98%);
+    font-weight: 600;
+    font-size: 1.3rem;
+    letter-spacing: 0.5px;
+    transition: opacity 0.5s ease;
+  }
+
+  .loader-circle {
+    width: 60px;
+    height: 60px;
+    border: 4px solid rgba(255,255,255,0.3);
+    border-top-color: hsl(27,79%,52%);
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+    margin-bottom: 1rem;
+  }
+
+  @keyframes spin {
+    from { transform: rotate(0deg); }
+    to { transform: rotate(360deg); }
+  }
+</style>
+
+<script>
+  // Hamburger toggle
+  const toggle = document.querySelector('.menu-toggle');
+  const navLinks = document.querySelector('.nav-links');
+
+  toggle.addEventListener('click', () => {
+    navLinks.classList.toggle('open');
+    toggle.classList.toggle('open');
+  });
+
+  // Scroll shrink effect
+  const nav = document.querySelector('.nav');
+  window.addEventListener('scroll', ()=>{
+    if(window.scrollY > 50){
+      nav.style.padding = '0.5rem 2rem';
+      nav.querySelector('.nav-logo').style.transform='scale(0.9)';
+    } else {
+      nav.style.padding = '1rem 2rem';
+      nav.querySelector('.nav-logo').style.transform='scale(1)';
     }
-  </style>
+  });
+</script>
+
 </head>
 
 <body>
@@ -128,9 +243,14 @@
   </div>
 
   <!-- 🚀 ناوبری -->
-  <nav>
+<nav class="nav">
+  <div class="nav-container">
     <div class="nav-logo">Sahand Apex</div>
-    <div class="menu-toggle">☰</div>
+    <div class="menu-toggle">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
     <div class="nav-links">
       <a href="#hero">خانه</a>
       <a href="#introduction">معرفی</a>
@@ -140,7 +260,8 @@
       <a href="#philosophy">فلسفه</a>
       <a href="#bio">درباره</a>
     </div>
-  </nav>
+  </div>
+</nav>
 
   <main>
     <div id="hero"></div>
