--- a/index.html
+++ b/index.html
@@ -12,53 +12,27 @@
   <!-- فونت‌ها -->
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&family=Vazirmatn:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-<style>
-  /* =========================================
-     Variables - پالت رنگ و Transition
-  ========================================= */
-  :root {
-    --background: hsl(0, 0%, 96%);
-    --foreground: hsl(210, 100%, 20%);
-    --accent: hsl(27, 79%, 52%);
-    --accent-hover: hsl(27, 79%, 58%);
-    --radius: 0.75rem;
-    --transition-smooth: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+  <style>
+    :root {
+      --background: hsl(0, 0%, 96%);
+      --foreground: hsl(210, 100%, 20%);
+      --accent: hsl(27, 79%, 52%);
+      --accent-hover: hsl(27, 79%, 58%);
+      --radius: 0.75rem;
+      --transition-smooth: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+    }
 
-    --primary-bg: rgba(0, 51, 102, 0.8);
-    --primary-color: #FAFAFA;
-    --transition: 0.3s cubic-bezier(0.4,0,0.2,1);
-  }
+    body {
+      margin: 0;
+      font-family: 'Vazirmatn', 'IBM Plex Sans', sans-serif;
+      background: var(--background);
+      color: var(--foreground);
+      -webkit-font-smoothing: antialiased;
+      overflow-x: hidden;
+    }
 
-  /* =========================================
-     Base Styles
-  ========================================= */
-  body {
-    margin: 0;
-    font-family: 'Vazirmatn','IBM Plex Sans',sans-serif;
-    background: var(--background);
-    color: var(--foreground);
-    -webkit-font-smoothing: antialiased;
-    overflow-x: hidden;
-  }
+    .container { max-width: 1200px; margin: 0 auto; padding: 0 1rem; }
 
-  .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 1rem;
-  }
-
-  main {
-    margin-top: 80px;
-  }
-
-  section {
-    min-height: 60vh;
-    padding: 4rem 0;
-  }
-
-  /* =========================================
-     Navbar
-  ========================================= */
   .nav {
     position: fixed;
     top:0; left:0; right:0;
@@ -101,6 +75,7 @@
     transition: color var(--transition);
   }
 
+  /* Underline animation */
   .nav-links a::after {
     content:'';
     position:absolute;
@@ -115,9 +90,7 @@
     width:100%;
   }
 
-  .nav-links a:hover {
-    color: var(--accent);
-  }
+  .nav-links a:hover { color: var(--accent); }
 
   /* Hamburger */
   .menu-toggle {
@@ -126,7 +99,6 @@
     gap:5px;
     cursor:pointer;
   }
-
   .menu-toggle span {
     display:block;
     height:3px;
@@ -136,8 +108,22 @@
     transition: all var(--transition);
   }
 
-  /* Mobile menu */
-  @media(max-width:768px){
+    .nav-logo { font-weight: 700; font-size: 1.5rem; color: var(--foreground); }
+
+    /* موبایل */
+    @media (max-width: 768px) {
+      nav { flex-wrap: wrap; }
+      .nav-links {
+        display: none; flex-direction: column; width: 100%; text-align: right;
+      }
+      .nav-links.active {
+        display: flex;
+        background: rgba(255,255,255,0.98);
+        padding: 1rem;
+        border-top: 1px solid #eee;
+      }
+      .menu-toggle { display: block; cursor: pointer; font-size: 1.5rem; }
+    } 
     .menu-toggle { display:flex; }
     .nav-links {
       position:fixed;
@@ -152,87 +138,43 @@
     }
     .nav-links.open { transform:translateX(0); }
   }
+    @media (min-width: 769px) { .menu-toggle { display: none; } }
 
-  /* Mobile fallback for older nav toggle */
-  @media (max-width: 768px) {
-    nav { flex-wrap: wrap; }
-    .nav-links {
-      display: none;
-      flex-direction: column;
-      width: 100%;
-      text-align: right;
-    }
-    .nav-links.active {
+    main { margin-top: 80px; }
+    section { min-height: 60vh; padding: 4rem 0; }
+
+    /* 🌙 Loader */
+    #loader {
+      position: fixed;
+      inset: 0;
+      background: linear-gradient(135deg, hsl(210,100%,20%), hsl(210,100%,30%));
       display: flex;
-      background: rgba(255,255,255,0.98);
-      padding: 1rem;
-      border-top: 1px solid #eee;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      z-index: 9999;
+      color: hsl(0,0%,98%);
+      font-weight: 600;
+      font-size: 1.3rem;
+      letter-spacing: 0.5px;
+      transition: opacity 0.5s ease;
     }
-    .menu-toggle { display: block; cursor: pointer; font-size: 1.5rem; }
-  }
 
-  @media (min-width: 769px) { 
-    .menu-toggle { display: none; } 
-  }
-
-  /* =========================================
-     Loader
-  ========================================= */
-  #loader {
-    position: fixed;
-    inset: 0;
-    background: linear-gradient(135deg, hsl(210,100%,20%), hsl(210,100%,30%));
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    z-index: 9999;
-    color: hsl(0,0%,98%);
-    font-weight: 600;
-    font-size: 1.3rem;
-    letter-spacing: 0.5px;
-    transition: opacity 0.5s ease;
-  }
-
-  .loader-circle {
-    width: 60px;
-    height: 60px;
-    border: 4px solid rgba(255,255,255,0.3);
-    border-top-color: hsl(27,79%,52%);
-    border-radius: 50%;
-    animation: spin 1s linear infinite;
-    margin-bottom: 1rem;
-  }
-
-  @keyframes spin {
-    from { transform: rotate(0deg); }
-    to { transform: rotate(360deg); }
-  }
-</style>
-
-<script>
-  // Hamburger toggle
-  const toggle = document.querySelector('.menu-toggle');
-  const navLinks = document.querySelector('.nav-links');
-
-  toggle.addEventListener('click', () => {
-    navLinks.classList.toggle('open');
-    toggle.classList.toggle('open');
-  });
-
-  // Scroll shrink effect
-  const nav = document.querySelector('.nav');
-  window.addEventListener('scroll', ()=>{
-    if(window.scrollY > 50){
-      nav.style.padding = '0.5rem 2rem';
-      nav.querySelector('.nav-logo').style.transform='scale(0.9)';
-    } else {
-      nav.style.padding = '1rem 2rem';
-      nav.querySelector('.nav-logo').style.transform='scale(1)';
+    .loader-circle {
+      width: 60px;
+      height: 60px;
+      border: 4px solid rgba(255,255,255,0.3);
+      border-top-color: hsl(27,79%,52%);
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+      margin-bottom: 1rem;
     }
-  });
-</script>
 
+    @keyframes spin {
+      from { transform: rotate(0deg); }
+      to { transform: rotate(360deg); }
+    }
+  </style>
 </head>
 
 <body>
@@ -310,5 +252,28 @@
       setTimeout(()=>loader.remove(), 600);
     });
   </script>
+  
+<script>
+  const toggle = document.querySelector('.menu-toggle');
+  const navLinks = document.querySelector('.nav-links');
+
+  toggle.addEventListener('click', ()=>{
+    navLinks.classList.toggle('open');
+    toggle.classList.toggle('open');
+  });
+
+  // Scroll shrink effect
+  const nav = document.querySelector('.nav');
+  window.addEventListener('scroll', ()=>{
+    if(window.scrollY > 50){
+      nav.style.padding = '0.5rem 2rem';
+      nav.querySelector('.nav-logo').style.transform='scale(0.9)';
+    } else {
+      nav.style.padding = '1rem 2rem';
+      nav.querySelector('.nav-logo').style.transform='scale(1)';
+    }
+  });
+</script>
+
 </body>
 </html>
