--- a/hero.html
+++ b/hero.html
@@ -26,7 +26,10 @@
     <!-- دکمه‌ها -->
     <div class="hero-buttons">
       <button class="btn-primary" onclick="document.getElementById('office').scrollIntoView({behavior:'smooth'})">🛒 مشاهده محصولات</button>
-      <button class="btn-outline" onclick="document.getElementById('story').scrollIntoView({behavior:'smooth'})">درباره ما</button>
+      <button class="btn-outline" onclick="window.location.href='newsbutton.html'">
+  مقالات 📰
+</button>
+
     </div>
 
     <!-- آمار کوتاه -->
