--- a/hero.html
+++ b/hero.html
@@ -26,7 +26,7 @@
     <!-- دکمه‌ها -->
     <div class="hero-buttons">
       <button class="btn-primary" onclick="document.getElementById('office').scrollIntoView({behavior:'smooth'})">🛒 مشاهده محصولات</button>
-      <button class="btn-outline" onclick="window.location.href='newsbutton.html'">
+      <button class="btn-outline" onclick="window.location.href='/news.html'">
   مقالات 📰
 </button>
 <div class="hero-stats" style="display:flex; justify-content:center; gap:2rem; flex-wrap:wrap; margin-top:3rem;">
