--- a/hero.html
+++ b/hero.html
@@ -25,7 +25,7 @@
 
     <!-- دکمه‌ها -->
     <div class="hero-buttons">
-      <button class="btn-primary" onclick="document.getElementById('office').scrollIntoView({behavior:'smooth'})">🛒 مشاهده محصولات</button>
+      <button class="btn-primary" onclick="document.getElementById('office').scrollIntoView({behavior:'smooth'})">🧰 مشاهده خدمات و محصولات</button>
 
 <div class="hero-stats" style="display:flex; justify-content:center; gap:2rem; flex-wrap:wrap; margin-top:3rem;">
   
@@ -48,9 +48,7 @@
   </div>
 
 </div>
-      <button class="btn-outline" onclick="window.location.href='news.html'">
-  مقالات 📰
-</button>
+
   <style>
     /* Hero Section */
     .hero-section {
