--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     background: var(--primary-bg);
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     transition: all var(--transition);
+    padding: 1.5rem 2rem; /* از 1rem به 1.5rem افزایش دادیم */
   }
 
   .nav-container {
