--- a/index.html
+++ b/index.html
@@ -48,15 +48,13 @@
 }
 
 
+.nav-container {
+  display: flex;
+  justify-content: center; /* وسط‌چین افقی */
+  align-items: center;     /* وسط‌چین عمودی */
+  gap: 2rem;               /* فاصله بین لوگو و لینک‌ها */
+}
 
-  .nav-container {
-    max-width:1200px;
-    margin:0 auto;
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    
-  }
 
 .nav-logo {
   font-size: 1.8rem; /* یا 1rem */
